# FaseD

./: .gitignore  Dockerfile  INTEGRATION.md  README.md
.github/agents/: code-review.agent.md
.github/workflows/: build.yml  package-release.yml
WinQuake/: CMakeLists.txt  cl_parse.c  host_cmd.c  in_inject.c  net_frame_server.c  pr_edict.c  pr_exec.c  sv_main.c  sys_container.c  vid_headless.c
docs/: architecture.md
infra/: main.bicep  main.json
infra/modules/: acr.bicep  app-insights.bicep  container-apps-env.bicep  game-worker.bicep  key-vault.bicep  log-analytics.bicep  quake-streaming.bicep  storage.bicep
infra/parameters/: dev.bicepparam
legacy-src/: common.c  net_udp.c  pr_cmds.c  progs.h  snd_capture.c  sv_main.c
scripts/: add_param.py  entrypoint.sh  patch_main_bicep.py
services/assets-api/: Dockerfile  go.mod  main.go
services/session-manager/: Dockerfile  go.mod  main.go
services/streaming-gateway/: Dockerfile  go.mod  main.go
services/telemetry-api/: Dockerfile  go.mod  main.go
specs/docs/architecture/: components.md  overview.md  patterns.md  security.md
specs/docs/infrastructure/: deployment.md  environments.md  operations.md
specs/docs/integration/: apis.md  databases.md  services.md
specs/docs/technology/: dependencies.md  stack.md  tools.md
specs/features/: asset-loading.md  console-system.md  dedicated-server.md  demo-recording.md  hud-status-bar.md  input-system.md  memory-management.md  menu-system.md  mod-support.md  networking-multiplayer.md  physics-world.md  quakec-scripting.md  rendering.md  save-load.md  sound-system.md  webrtc-streaming.md
specs/modernize/assessment/: architecture-review.md  compliance-gaps.md  performance-analysis.md  security-audit.md  technical-debt.md
specs/modernize/plans/: migration-plan.md  rollback-procedures.md  testing-strategy.md  validation-criteria.md
specs/modernize/risk-management/: contingency-plans.md  mitigation-strategies.md  risk-analysis.md
specs/modernize/strategy/: architecture-evolution.md  devops-transformation.md  roadmap.md  security-enhancement.md  technology-upgrade.md
specs/tasks/modernization/: architecture-refactor-container-system.md  architecture-refactor-headless-audio-input.md  architecture-refactor-headless-video.md  architecture-refactor-session-manager.md  architecture-refactor-streaming-gateway.md  dependency-upgrade-build-system.md  infrastructure-azure-deployment.md  performance-optimization-encoding.md  security-remediation-buffer-overflows.md
specs/tasks/testing/: feature-validation-streaming-e2e.md  integration-test-services.md  performance-benchmark-latency-scalability.md  regression-test-engine-features.md
templates/: RELEASE_README.md
